<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/rectangle"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".Comic_Activity$PlaceholderFragment">

    <TextView
        android:id="@+id/comic_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comic_title"
        android:textColor="#000000"
        android:textSize="18dp"
        android:textStyle="bold"
        android:typeface="sans"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        tools:text="The Sake of Argument"/>

    <ImageView
        android:id="@+id/comic_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_below="@+id/comic_title"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:src="@drawable/loading_image"
        tools:layout_height="100dp"/>

    <TextView
        android:id="@+id/comic_number_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comic_image"
        android:typeface="monospace"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="10dp"
        android:background="@drawable/comic_info_rectangle"
        android:text="@string/comic_number_text"
        tools:text="@string/comic_number_text"/>

    <TextView
        android:id="@+id/comic_hover_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comic_number_text"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:text="@string/hover_text"
        tools:text="@string/hover_text"/>

    <TextView
        android:id="@+id/comic_transcript_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comic_hover_text"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:text="@string/hover_text"
        tools:text="@string/hover_text"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/comic_transcript_text">

        <TextView
            android:id="@+id/first_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/first_button"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"/>

        <TextView
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_toRightOf="@id/first_button"
            android:text="@string/prev_button"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"/>

        <TextView
            android:id="@+id/random_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_toRightOf="@id/prev_button"
            android:text="@string/random_button"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"/>

        <TextView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_toRightOf="@id/random_button"
            android:text="@string/next_button"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"/>

        <TextView
            android:id="@+id/last_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_toRightOf="@id/next_button"
            android:text="@string/last_button"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button"/>
    </RelativeLayout>

</RelativeLayout>
